--- a/app.json
+++ b/app.json
@@ -32,5 +32,6 @@
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
   },
-  "runtime": "8.0"
+  "runtime": "8.0",
+  "features": ["TranslationFile"]
 }
